--- a/SolarPlanets/SolarPlanets/SolarPlanets.csproj
+++ b/SolarPlanets/SolarPlanets/SolarPlanets.csproj
@@ -19,6 +19,7 @@
 		<ApplicationIdGuid>ecf92f23-b718-49bd-97e7-2334729309cb</ApplicationIdGuid>
 
 		<!-- Versions -->
+    <WindowsPackageType Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">None</WindowsPackageType>
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
@@ -50,6 +51,10 @@
 
 	<ItemGroup>
 	  <Folder Include="Resources\Fonts\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.2" />
 	</ItemGroup>
 
 	<ItemGroup>
