--- a/SolarPlanets/SolarPlanets/SolarPlanets.csproj
+++ b/SolarPlanets/SolarPlanets/SolarPlanets.csproj
@@ -50,6 +50,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\images.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Folder Include="Resources\Fonts\" />
 	</ItemGroup>
 
